# rf-detr

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yaml  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: build-package.yml  check-license-headers.yml  ci-build-docs.yml  ci-integrations.yml  ci-tests-cpu.yml  ci-tests-gpu.yml  ci-tests.yml  pr-conflict-labeler.yml  publish-docs.yml  publish-pre-release.yml  publish-release.yml
docs/learn/: export.md
docs/learn/run/: detection.md  segmentation.md
docs/learn/train/: advanced.md  augmentations.md  customization.md  index.md  loggers.md  training-parameters.md
docs/reference/: training.md
notebooks/: release-demo_1-5.ipynb
rfdetr/: detr.py  main.py
rfdetr/datasets/: coco_eval.py  synthetic.py
rfdetr/deploy/: benchmark.py  export.py
rfdetr/util/: benchmark.py  metrics.py  misc.py
src/rfdetr/: __init__.py  __main__.py  _namespace.py  config.py  detr.py  engine.py  inference.py  main.py  variants.py
src/rfdetr/assets/: coco_classes.py  model_weights.py
src/rfdetr/cli/: __init__.py  main.py
src/rfdetr/datasets/: __init__.py  _develop.py  aug_config.py  coco.py  coco_eval.py  save_grids.py  synthetic.py  transforms.py  yolo.py
src/rfdetr/deploy/: __init__.py  benchmark.py  export.py
src/rfdetr/deploy/_onnx/: __init__.py  optimizer.py  symbolic.py
src/rfdetr/evaluation/: __init__.py  coco_eval.py  matching.py
src/rfdetr/export/: benchmark.py  export.py  main.py  tensorrt.py
src/rfdetr/export/_onnx/: __init__.py  exporter.py  optimizer.py
src/rfdetr/lit/: __init__.py  _args.py  checkpoint.py  cli.py  compat.py  datamodule.py  module.py  plot.py
src/rfdetr/lit/callbacks/: __init__.py  best_model.py  coco_eval.py  drop_schedule.py  ema.py  metrics.py
src/rfdetr/models/: __init__.py  criterion.py  lwdetr.py  matcher.py  postprocess.py  segmentation_head.py  transformer.py  weights.py
src/rfdetr/models/backbone/: __init__.py  backbone.py  dinov2.py  dinov2_with_windowed_attn.py  projector.py
src/rfdetr/models/heads/: __init__.py  segmentation.py
src/rfdetr/models/ops/modules/: ms_deform_attn.py
src/rfdetr/platform/: platform_downloads.py
src/rfdetr/training/: __init__.py  _namespace.py  auto_batch.py  checkpoint.py  cli.py  datamodule.py  model_ema.py  module.py  module_data.py  module_model.py  trainer.py
src/rfdetr/training/callbacks/: __init__.py  best_model.py  coco_eval.py  drop_schedule.py  ema.py
src/rfdetr/util/: box_ops.py  coco_classes.py  drop_scheduler.py  files.py  get_param_dicts.py  logger.py  metrics.py  misc.py  package.py  utils.py  visualize.py
src/rfdetr/utilities/: __init__.py  box_ops.py  decorators.py  distributed.py  files.py  logger.py  package.py  state_dict.py  tensors.py
src/rfdetr/utils/: decorators.py
tests/: conftest.py  helpers.py  test_engine.py  test_evaluation.py  test_namespace.py  try_instantiate_all_models.py
tests/assets/: test_downloads.py  test_model_weights.py
tests/benchmarks/: conftest.py  test_coco_inference.py  test_coco_inference_ptl.py  test_inference_coco.py  test_synthetic_convergence.py  test_synthetic_convergence_ptl.py  test_training_synthetic.py  test_trt_inference.py
tests/cli/: test_configs.py  test_legacy_cli.py  test_smoke.py
tests/datasets/: test_augmentations.py  test_coco.py  test_coco_rle.py  test_save_grids.py  test_synthetic.py  test_transforms.py  test_yolo.py
tests/lit/: conftest.py  helpers.py  test_args.py  test_best_model_callback.py  test_build_trainer.py  test_cli.py  test_coco_eval_callback.py  test_compat.py  test_datamodule.py  test_detr_shim.py  test_drop_path_callback.py  test_ema_callback.py  test_metrics_csv.py  test_metrics_plot_callback.py  test_module.py  test_parity.py  test_trainer_smoke.py
tests/models/: test_builder_characterization.py  test_config.py  test_drop_path.py  test_export.py  test_from_checkpoint.py  test_optimize_for_inference.py  test_populate_args_deprecation.py  test_predict.py  test_segmentation_head.py  test_train_resume.py  test_weights.py
tests/models/backbone/: test_backbone_export.py  test_windowed_dino.py
tests/training/: conftest.py  test_args.py  test_auto_batch.py  test_best_model_callback.py  test_build_trainer.py  test_coco_eval_callback.py  test_datamodule.py  test_detr_shim.py  test_load_pretrain_weights.py  test_metrics_csv.py  test_module.py  test_module_data.py  test_module_model.py  test_trainer_smoke.py
tests/util/: test_decorators.py  test_file_validation.py  test_metrics.py  test_misc.py
tests/utilities/: test_box_ops.py  test_file_validation.py  test_package.py  test_state_dict.py
