[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rfdetr"
version = "1.6.0.rc0"
description = "RF-DETR"
readme = "README.md"
authors = [
    {name = "Roboflow, Inc", email = "develop@roboflow.com"}
]
license = {text = "Apache License 2.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS"
]
keywords = ["machine-learning", "deep-learning", "vision", "ML", "DL", "AI", "DETR", "RF-DETR", "Roboflow"]

dependencies = [
    "requests",                        # weight download from remote URLs
    "torch>=2.2.0",                    # core tensor ops and model forward pass
    "torchvision>=0.14.0",             # image transforms and ops
    "tqdm",                            # progress bars during weight download
    "transformers>4.0.0, <5.0.0",     # DINOv2 backbone loading
    "peft",                            # LoRA backbone weight loading; TODO: consider moving to extras
    "pydantic",                        # ModelConfig / TrainConfig validation
    "supervision",                     # inference output (Detections, Masks)
    "pyDeprecate>=0.3,<1",             # deprecation warnings for legacy APIs
]

[project.optional-dependencies]
train = [
    "pytorch_lightning>=2.6,<3",
    "torchmetrics[detection]>=1.2",
    "faster-coco-eval>=1.7.2",
    "pycocotools",
    "scipy",
    "albumentations>=1.0.0,<2.0.0",
    "roboflow",
    "rf100vl",
]
onnx = [
    "onnx>=1.16.0,<1.20",
    "onnxsim<0.6.0",  # TODO: onnxsim 0.6.0+ hangs on install
    "onnx_graphsurgeon",
    "onnxruntime",
    "polygraphy",
]
trt = [
    "pycuda",
    "onnxruntime-gpu",
    "tensorrt>=8.6.1",
    "polygraphy",
]
loggers = [
    "tensorboard>=2.13.0",
    "wandb",
    "mlflow",
    "clearml",
]
visual = [
    "matplotlib",
    "pandas",
    "seaborn",
]
cli = ["jsonargparse[signatures]>=4.27.7"]
plus = ["rfdetr_plus>=1.0.1, <2.0.0"]

[dependency-groups]
build = [
    "twine>=5.1.1",
    "wheel>=0.40",
    "build>=0.10"
]

tests = [
  "pytest>=7.2,<9",
  "pytest-cov>=4,<8",
  "pytest-xdist>=3.6,<4",
  "pytest-rerunfailures>=10,<15",
  "pytest-timeout>=2,<3",
]

docs = [
    "mkdocs-material[imaging]>=9.7",
    "mkdocstrings>=0.25.2,<0.30.0",
    "mkdocstrings-python>=1.10.9",
    "mike>=2.0.0",
    "mkdocs-jupyter>=0.24.3",
    "mkdocs-git-committers-plugin-2>=2.4.1",
    "mkdocs-git-revision-date-localized-plugin>=1.2.4"
]

[project.urls]
Homepage = "https://github.com/roboflow/rf-detr"

[project.scripts]
rfdetr = "rfdetr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["rfdetr*"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
rfdetr = ["py.typed", "models/backbone/dinov2_configs/*.json"]

[tool.ruff]
fix = true
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
extend-select = [
    "RUF100",  # yesqa
]
ignore = [
    "E722",  # todo: Do not use bare `except`
]

[tool.pytest.ini_options]
addopts = [
    "-v",                   # verbose output
    "--color=yes",          # colored output
    "--doctest-modules",    # run doctests from all modules
]
pythonpath = ["src"]
markers = [
    "gpu: tests that require GPU or are slow on CPU",
    "flaky: tests that may fail due to nondeterminism"
]

[tool.codespell]
skip = "*.pth"
